RESOLVED FIXED198946
Attachment elements are missing context menu previews
https://bugs.webkit.org/show_bug.cgi?id=198946
Summary Attachment elements are missing context menu previews
Dean Jackson
Reported 2019-06-17 17:28:43 PDT
Attachment elements are missing context menu previews
Attachments
Patch (3.89 KB, patch)
2019-06-17 17:30 PDT, Dean Jackson
thorton: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews211 for win-future (13.91 MB, application/zip)
2019-06-17 21:29 PDT, EWS Watchlist
no flags
Dean Jackson
Comment 1 2019-06-17 17:30:38 PDT
Radar WebKit Bug Importer
Comment 2 2019-06-17 17:34:33 PDT
EWS Watchlist
Comment 3 2019-06-17 21:29:32 PDT
Comment on attachment 372299 [details] Patch Attachment 372299 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12504280 New failing tests: fast/frames/take-focus-from-iframe.html
EWS Watchlist
Comment 4 2019-06-17 21:29:35 PDT
Created attachment 372321 [details] Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Dean Jackson
Comment 5 2019-06-18 03:46:39 PDT
Note You need to log in before you can comment on or make changes to this bug.