Attachment elements are missing context menu previews https://bugs.webkit.org/show_bug.cgi?id=198946

Reviewed by Tim Horton.

When requesting position information on an <attachment> element,
we were not providing a snapshot image.

* WebProcess/WebPage/WebPage.h: New common method to take a snapshot.
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::shareableBitmapSnapshotForNode): New helper.
(WebKit::WebPage::positionInformation): If the element is an attachment,
then ask for a snapshot.

Canonical link: https://commits.webkit.org/212927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246535 268f45cc-cd09-0410-ab3c-d52691b4dbfc